--- a/sitedata/workshops.yml
+++ b/sitedata/workshops.yml
@@ -136,8 +136,8 @@
 - UID: WS-8
   title: "W8: Deep Learning on Graphs: Method and Applications (DLG-AAAI’21)"
   organizers: Lingfei Wu, Jiliang Tan, Yinglong Xia and Jian Pei
-  abstract: Deep Learning models are at the core of research in Artificial Intelligence research today. It is well-known that deep learning techniques that were disruptive for Euclidean data such as images or sequence data such as text are not immediately applicable to graph-structured data. This gap has driven a tide in research for deep learning on graphs on various tasks such as graph representation learning, graph generation, and graph classification. New neural network architectures on graph-structured data have achieved remarkable performance in these tasks when applied to domains such as social networks, bioinformatics and medical informatics.
-  website:
+  abstract: This one-day workshop aims to bring together both academic researchers and industrial practitioners from different backgrounds and perspectives to above challenges. The workshop will consist of contributed talks, contributed posters, and invited talks on a wide variety of the methods and applications. Work-in- progress papers, demos, and visionary papers are also welcome. This workshop intends to share visions of investigating new approaches and methods at the intersection of Graph Neural Networks and real-world applications.
+  website: http://deep-learning-graphs.bitbucket.io/dlg-aaai21/
   rocketchat_channel: W8DeepLearningonGraphs
   alias: W8DeepLearningonGraphs
   sessions:
@@ -239,7 +239,7 @@
 - UID: WS-13
   title: 'W13: 5th International Workshop on Health Intelligence (W3PHIAI-21)'
   organizers: "Martin Michalowski, Arash Shaban-Nejad, Cochair, Szymon Wilk, David L. Buckeridge, John S. Brownstein, Byron C. Wallace and Michael J. Paul"
-  abstract: Public health authorities and researchers collect data from many sources and analyze these data together to estimate the incidence and prevalence of different health conditions, as well as related risk factors. Modern surveillance systems employ tools and techniques from artificial intelligence and machine learning to monitor direct and indirect signals and indicators of disease activities for early, automatic detection of emerging outbreaks and other health-relevant patterns. To provide proper alerts and timely response, public health officials and researchers systematically gather news and other reports about suspected disease outbreaks, bioterrorism, and other events of potential international public health concern, from a wide range of formal and informal sources. Given the ever-increasing role of the World Wide Web as a source of information in many domains including healthcare, accessing, managing, and analyzing its content has brought new opportunities and challenges. This is especially the case for non- traditional online resources such as social networks, blogs, news feed, twitter posts, and online communities with the sheer size and ever-increasing growth and change rate of their data. Web applications along with text processing programs are increasingly being used to harness online data and information to discover meaningful patterns identifying emerging health threats. The advances in web science and technology for data management, integration, mining, classification, filtering, and visualization has given rise to a variety of applications representing real-time data on epidemics.
+  abstract: The goal of this workshop is to focus on creating and refining AI-based approaches that (1) process personalized data, (2) help patients (and families) participate in the care process, (3) improve patient participation, (4) help physicians utilize this participation in order to provide high quality and efficient personalized care, and (5) connect patients with information beyond that available within their care setting. The extraction, representation, and sharing of health data, patient preference elicitation, personalization of “generic” therapy plans, adaptation to care environments and available health expertise, and making medical information accessible to patients are some of the relevant problems in need of AI-based solutions.
   website: http://w3phiai2021.w3phi.com/
   rocketchat_channel: W13InternationalWorkshoponHealthIntelligence
   alias: W13InternationalWorkshoponHealthIntelligence
@@ -320,7 +320,7 @@
 - UID: WS-17
   title: "W17: Learning Network Architecture during Training"
   organizers: Scott E. Fahlman, Kate Farrahi, George Magoulas, Edouard Oyallon, Bhiksha Raj Ramakrishnan and Dean Alderucci
-  abstract: A fundamental problem in the use of artificial neural networks is that the first step is to guess the network architecture. Fine tuning a neural network is very time consuming and far from optimal. Hyperparameters such as the number of layers, the number of nodes in each layer, the pattern of connectivity, and the presence and placement of elements such as memory cells, recurrent connections, and convolutional elements are all manually selected. If it turns out that the architecture is not appropriate for the task, the user must repeatedly adjust the architecture and retrain the network until an acceptable architecture has been obtained.
+  abstract: In this workshop we would like to focus on a contrasting approach, to learn the architecture during training. This topic encompasses forms of Neural Architecture Search (NAS) in which the performance properties of each architecture, after some training, are used to guide the selection of the next architecture to be tried. This topic also encompasses techniques that augment or alter the network as the network is trained. An example of the latter is the Cascade Correlation algorithm, as well as others that incrementally build or modify a neural network during training, as needed for the problem at hand.
   website: https://www.cs.cmu.edu/~sef/AAAI-2021-Workshop.htm
   rocketchat_channel: W17LearningNetworkArchitectureDuringTraining
   alias: W17LearningNetworkArchitectureDuringTraining
@@ -389,7 +389,7 @@
 - UID: WS-21
   title: "W21: Workshop on Privacy-Preserving Artificial Intelligence (PPAI-21)"
   organizers: "Ferdinando Fioretto, Pascal Van Hentenryck and Richard W. Evans"
-  abstract: "The availability of massive amounts of data, coupled with high-performance cloud computing platforms, has driven significant progress in artificial intelligence and, in particular, machine learning and optimization. It has profoundly impacted several areas, including computer vision, natural language processing, and transportation. However, the use of rich data sets also raises significant privacy concerns: They often reveal personal sensitive information that can be exploited, without the knowledge and/or consent of the involved individuals, for various purposes including monitoring, discrimination, and illegal activities."
+  abstract: "PPAI-21 will place particular emphasis on: (1) Algorithmic approaches to protect data privacy in the context of learning, optimization, and decision making that raise fundamental challenges for existing technologies; (2) Privacy challenges created by the governments and tech industry response to the Covid-19 outbreak; (3) Social issues related to tracking, tracing, and surveillance programs; and (4) Algorithms and frameworks to release privacy-preserving benchmarks and data sets."
   website: https://ppai21.github.io/
   rocketchat_channel: W21PrivacyPreservingArtificialIntelligence
   alias: W21PrivacyPreservingArtificialIntelligence
@@ -425,7 +425,7 @@
 - UID: WS-23
   title: "W23: Reinforcement Learning in Games"
   organizers: Marc Lanctot, Julien Perolat and Martin Schmid
-  abstract: "Games provide an abstract and formal model of environments in which multiple agents interact: each player has a well-defined goal and rules to describe the effects of interactions among the players. The first achievements in playing these games at super-human level were attained with methods that relied on and exploited domain expertise that was designed manually (e.g. chess, checkers). In recent years, we have seen examples of general approaches that learn to play these games via self-play reinforcement learning (RL), as first demonstrated in Backgammon. While progress has been impressive, we believe we have just scratched the surface of what is capable, and much work remains to be done in order to truly understand the algorithms and learning processes within these environments."
+  abstract: "Games provide an abstract and formal model of environments in which multiple agents interact: each player has a well-defined goal and rules to describe the effects of interactions among the players. The first achievements in playing these games at super-human level were attained with methods that relied on and exploited domain expertise that was designed manually (e.g. chess, checkers). In recent years, we have seen examples of general approaches that learn to play these games via self-play reinforcement learning (RL), as first demonstrated in Backgammon. While progress has been impressive, we believe we have just scratched the surface of what is capable, and much work remains to be done in order to truly understand the algorithms and learning processes within these environments. The main objective of the workshop is to bring researchers together to discuss ideas, preliminary results, and ongoing research in the field of reinforcement in games."
   website: http://aaai-rlg.mlanctot.info/
   rocketchat_channel: W23ReinforcementLearninginGames
   alias: W23ReinforcementLearninginGames
@@ -460,7 +460,7 @@
 - UID: WS-25
   title: 'W25: Toward Robust, Secure and Efficient Machine Learning'
   organizers: "Dawn Song, Song Han, Han Yu, Lixin Fan and KamWoh Ng"
-  abstract: Machine learning technology has been improving with every passing day and has been extensively applied to nearly every corner of the society that offers substantial benefits to our daily lives. However, machine learning models face various threats. For example, it is known that machine learning models are vulnerable to adversarial samples. The existence of adversarial examples reveals that current machine learning models are vulnerable and can be easily fooled, leading to serious security concerns in machine learning systems such as autonomous driving vehicles or face recognition systems.
+  abstract: This one-day workshop intends to bring experts from machine learning, security communities, and federated learning together to work more closely in addressing the posed concerns. Specifically, we seek to study threats and defenses to machine learning not only in a single node setting but also in a distributed setting, as well as potential defense strategies in both settings. In summary, we seek solutions to achieve a wholistic solution for robust, secure and efficient machine learning.
   website: http://federated-learning.org/rseml2021/
   rocketchat_channel: W25TowardsRobustSecureandEfficientMachineLearning
   alias: W25TowardsRobustSecureandEfficientMachineLearning
