--- a/sitedata/committee.yml
+++ b/sitedata/committee.yml
@@ -164,7 +164,7 @@ committee:
   name: Jim Boerkoel
   role: Undergraduate Consortium Cochairs
 - aff: Wentworth Institute of Technology, USA
-  image: static/images/committee/42_Mehmet Ergezer.jpg
+  image: none
   name: Mehmet Ergezer
   role: Undergraduate Consortium Cochairs
 - aff: Colby College, USA
