--- a/sitedata/tutorials.yml
+++ b/sitedata/tutorials.yml
@@ -1499,3 +1499,69 @@
     - name: Morgan Byers, Vangelis Metsis
       description: |+
         to be continued
+- UID: OTHER
+  title: 'xxx'
+  organizers: Arjun Subramonian
+  info: |-
+    to be continued
+  rocketchat_channel: xxx
+  prerecorded: '000'
+  abstract: |-
+    <p>
+    xxx
+    </p>
+  sessions:
+    - name: "Opening remarks"
+      start_time: 2021-02-02 16:00:00+00:00
+      end_time: 2021-02-02 16:15:00+00:00
+      zoom_link: 123.com
+      hosts: " "
+    - name: "Talk: Roles for Computing in Social Justice"
+      start_time: 2021-02-02 16:15:00+00:00
+      end_time: 2021-02-02 17:30:00+00:00
+      zoom_link: 123.com
+      hosts: <a href="https://www2.eecs.berkeley.edu/Faculty/Homepages/rabebe.html">Dr. Rediet Abebe</a>
+    - name: "Break"
+      start_time: 2021-02-02 17:30:00+00:00
+      end_time: 2021-02-02 17:45:00+00:00
+      zoom_link: 123.com
+      hosts: " "
+    - name: "UC Scholar Mixer"
+      start_time: 2021-02-02 17:45:00+00:00
+      end_time: 2021-02-02 19:00:00+00:00
+      zoom_link: 123.com
+      hosts: " "
+    - name: "Lunch Break"
+      start_time: 2021-02-02 19:00:00+00:00
+      end_time: 2021-02-02 20:00:00+00:00
+      zoom_link: 123.com
+      hosts: " "
+    - name: "Talk: Wanted: You and Your Mind"
+      start_time: 2021-02-02 20:10:00+00:00
+      end_time: 2021-02-02 21:30:00+00:00
+      zoom_link: 123.com
+      hosts: <a href="http://www.cs.utep.edu/agates/">Dr. Ann Gates</a>
+    - name: "Break"
+      start_time: 2021-02-02 21:30:00+00:00
+      end_time: 2021-02-02 21:45:00+00:00
+      zoom_link: 123.com
+      hosts: " "
+    - name: "Grad Student Panel: What is grad school REALLY like?"
+      start_time: 2021-02-02 21:45:00+00:00
+      end_time: 2021-02-02 22:30:00+00:00
+      zoom_link: 123.com
+      hosts: " "
+    - name: "UC Poster Session"
+      start_time: 2021-02-02 22:30:00+00:00
+      end_time: 2021-02-03 00:50:00+00:00
+      zoom_link: 123.com
+      hosts: " "
+    - name: "Closing remarks"
+      start_time: 2021-02-03 00:50:00+00:00
+      end_time: 2021-02-03 01:00:00+00:00
+      zoom_link: 123.com
+      hosts: " "
+  authors:
+    - name: xxx
+      description: |+
+        to be continued
