update committee and help desk

--- a/sitedata/committee.yml
+++ b/sitedata/committee.yml
@@ -125,7 +125,7 @@ committee:
   role: EAAI-21 Symposium Cochairs
   pweb: https://www.stlawu.edu/people/lisa-torrey
 - aff: Princeton University, USA
-  image: static/images/committee/26_Michael Guerzhoy.jpg
+  image: static/images/committee/26_Michael Guerzhoy_2.jpg
   name: Michael Guerzhoy
   role: EAAI-21 Symposium Cochairs
   pweb: http://guerzhoy.princeton.edu/
