Dataminr name change

--- a/sitedata/sponsors.yml
+++ b/sitedata/sponsors.yml
@@ -145,7 +145,7 @@
   zoom_link: https://us02web.zoom.us/j/5693515745?pwd=bUdHdkVnQkd3R2tDeHR3Qi96UHA3Zz09
 - name: Dataminr
   level: Silver
-  logo: baidu.png
+  logo: Dataminr.png
   logoontop: true
   website: https://www.dataminr.com/
   description: |
