--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # secrets
-tools/aws/cognito/aws_profile.yml
+#tools/aws/cognito/aws_profile.yml
 
+.DS_Store
+doc/.DS_Store
 
 # IDE
 .idea
 # Byte-compiled / optimized / DLL files
 __pycache__/
 miniconf/__pycache__/
-scripts/rocketchat/__pycache__/
-scripts/rocketchat/config.yml
 *.py[cod]
 *$py.class
 
