--- a/sitedata/doctoral_consortium.yml
+++ b/sitedata/doctoral_consortium.yml
@@ -11,16 +11,16 @@
     xxx
     </p>
   sessions:
-    - name: "Opening remarks"
-      start_time: 2021-02-02 16:00:00+00:00
-      end_time: 2021-02-02 16:15:00+00:00
+    - name: "xxx"
+      start_time: 2021-02-04 16:00:00+00:00
+      end_time: 2021-02-04 16:15:00+00:00
       zoom_link: 123.com
-      hosts: "TBD"
-    - name: "Talk: Roles for Computing in Social Justice"
-      start_time: 2021-02-02 16:15:00+00:00
-      end_time: 2021-02-02 17:30:00+00:00
+      hosts: "xxx"
+    - name: "xxx"
+      start_time: 2021-02-04 16:15:00+00:00
+      end_time: 2021-02-04 17:30:00+00:00
       zoom_link: 123.com
-      hosts: "TBD"
+      hosts: "xxx"
   authors:
     - name: xxx
       description: |+
